--- a/src/utils/functions.scss
+++ b/src/utils/functions.scss
@@ -28,7 +28,6 @@
   @if $hasHoverImage {
     // Generate styles for the hover image
     div:nth-child(#{$rowIndex}) div:nth-child(#{$columnIndex}) a:hover {
-      display: flex;
       flex-direction: column-reverse !important;
       align-items: center;
 
